# SISL

./: .cvsignore  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.local  README
CVSROOT/: cvsignore  modules
app/: prog1.c  s1013prob.C  s1320prob.C  s1606prob.C  surf_surf_int.C
cmake/: SISLConfig.cmake.in
doc/manual/: chap_curve_definition.tex  chap_curve_utilities.tex  chap_data_reduction.tex  chap_intro_abridged.tex  chap_introduction.tex  chap_surface_definition.tex  chap_surface_interrogation.tex  chap_surface_utilities.tex  foreword.tex  licensing_information.tex  manual.aux  manual.idx  manual.ilg  manual.ind  manual.tex  manual.toc  raytracing.ps  sample_programs.tex  sec_box_object.tex  sec_cone_object.tex  sec_curve_object.tex  sec_intcurve_object.tex  sec_spline_curve.tex  sislman.sty  sislman2.sty  viewer.tex
doc/manual/func/: copyCurve.tex  freeCurve.tex  freeIntcrvlist.tex  freeIntcurve.tex  freeSurf.tex  newCurve.tex  newIntcurve.tex  newSurf.tex  newbox.tex  newdir.tex  s1001.tex  s1011.tex  s1012.tex  s1013.tex  s1014.tex  s1015.tex  s1016.tex  s1017.tex  s1018.tex  s1021.tex  s1022.tex  s1023.tex  s1024.tex  s1025.tex  s1221.tex  s1225.tex  s1226.tex  s1227.tex  s1231.tex  s1233.tex  s1240.tex  s1241.tex  s1243.tex  s1302.tex  s1303.tex  s1310.tex  s1314.tex  s1315.tex  s1316.tex  s1317.tex  (+145 more)
doc/manual/type/: SISLCurve.tex  SISLDir.tex  SISLIntcurve.tex  test.tex
doc/users_guide/: chap_intro_abridged.tex  f2pspost.aux  f2pspost.ps  foreword.tex  guide.aux  guide.tex  guide.toc  raytracing.fig.bak  sample_programs.tex  sec_spline_curve.tex
examples/: example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  local_settings
examples/streaming/include/: GoReadWrite.h
examples/streaming/src/: GoReadWrite.cpp
examples/viewer/: sisl_view_demo.cpp
examples/viewer/include/: aux2.h  gl_aux.h  glutils.h  jonvec.h  mouse.h  sisl_aux.h  transfutils.h
examples/viewer/src/: aux2.cpp  gl_aux.cpp  glutils.cpp  mouse.cpp  sisl_aux.cpp  transfutils.cpp
gpl/: ChangeLog  INSTRUCTIONS  README  generate_gpl_distro  license_header  sisl_4.4_GPL.tgz
include/: #sisl-copyright.h#  copyright.h  sisl-copyright.h  sisl.h  sislP.h
sisl_gpl_distro/: INSTRUCTIONS  Makefile  README  documented_routines  makefile_template  prepare_distro  removecomments  removecomments.C
sisl_gpl_distro/extras/: configure  license_header  makefile_template  removecomments.C
sisl_gpl_distro/extras/doc/manual/tex/: chap_curve_analysis.ilg  chap_curve_analysis.tex  chap_curve_interrogation.tex  chap_curve_utilities.tex  chap_error_codes.tex  chap_surface_analysis.tex  chap_surface_interrogation.tex  chap_surface_utilities.tex  manual.idx  manual.ilg  manual.ind  manual.tex  sec_spline_surface.tex  sec_surface_object.tex  surf1.fig  surf1.ps  titlepage.sty
sisl_gpl_distro/extras/doc/manual/tex/func/: copyCurve.tex  copySurface.tex  freeIntcrvlist.tex  freeIntcurve.tex  newCurve.tex  newbox.tex  s1013.tex  s1016.tex  s1017.tex  s1018.tex  s1021.tex  s1022.tex  s1025.tex  s1221.tex  s1226.tex  s1227.tex  s1233.tex  s1237.tex  s1238.tex  s1242.tex  s1243.tex  s1302.tex  s1310.tex  s1314.tex  s1315.tex  s1316.tex  s1318.tex  s1319.tex  s1327.tex  s1328.tex  s1334.tex  s1340.tex  s1342.tex  s1343.tex  s1345.tex  s1346.tex  s1347.tex  s1348.tex  s1356.tex  s1358.tex  (+74 more)
sisl_gpl_distro/extras/doc/manual/tex/type/: SISLBox.tex  SISLDir.tex  SISLSurf.tex
sisl_gpl_distro/extras/doc/users_guide/tex/: guide.aux  guide.tex  guide.toc  licensing_information.tex  pre.aux  raytracing.fig  sec_spline_surface.tex  viewer.tex
sisl_gpl_distro/extras/examples/: example02.cpp  example03.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example15.cpp
sisl_gpl_distro/extras/streaming/src/: GoReadWrite.cpp
sisl_gpl_distro/extras/viewer/: Makefile  sisl_view_demo.cpp
sisl_gpl_distro/extras/viewer/include/: gl_aux.h  glutils.h  transfutils.h
sisl_gpl_distro/extras/viewer/src/: aux2.cpp  gl_aux.cpp  glutils.cpp  mouse.cpp
src/: construct.c  crvarctang.c  crvcrvtang.c  crvlintang.c  destruct.c  ev_cv_off.c  eval_2_crv.c  evalcrvarc.c  hp_s1880.c  intjoinper.c  make3D.c  makecvkreg.c  makesfkreg.c  maketracks.c  mk_cv_cycl.c  newknots.c  pickcrvsf.c  pocrvtang.c  refine_all.c  s1001.c  s1011.c  s1012.c  s1013.c  s1014.c  s1015.c  s1016.c  s1017.c  s1018.c  s1021.c  s1022.c  s1023.c  s1024.c  s1025.c  s1119.c  s1161.c  s1162.c  s1172.c  s1173.c  s1174.c  s1190.c  (+576 more)
streaming/: local_settings
streaming/include/: GoReadWrite.h
streaming/src/: GoReadWrite.cpp
viewer/: local_settings  sisl_view_demo.cpp
viewer/include/: aux2.h  gl_aux.h  glutils.h  jonvec.h  mouse.h  sisl_aux.h  transfutils.h
viewer/src/: aux2.cpp  gl_aux.cpp  glutils.cpp  mouse.cpp  sisl_aux.cpp  transfutils.cpp
